Driving off security list. Retrieve data from API if not in file cache.

--- a/sample-application.properties
+++ b/sample-application.properties
@@ -1,3 +1,6 @@
 corpus.pathAndFile=/some/path/to/corpus.csv
 fileCache.root=/some/path/to/fileCache
 fileCache.suffix=intrinio
+
+api.username=a_user_name
+api.password=a_password
